2011-12-07  Christopher Faulet  <christopher@yakaz.com>

	* src/syslog.erl: Add a version of log functions that taking only
	a string as parameter.

	Version 1.0.1. Prepare the first stable version.

	* ebin/syslogger.appup.in: Support live upgrade from 1.0.0 to
	1.0.1.

2010-11-11  Christopher Faulet  <christopher@yakaz.com>

	Branche STABLE_1.

2010-11-10  Christopher Faulet  <christopher@yakaz.com>

	Version 1.0.0. Prepare the first stable version.

	* ebin/syslogger.appup.in: Support live upgrade from 0.1.0 to
	1.0.0.

2010-09-13  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	Synchronize with bones.

	* src/Makefile.am: Emakefile depends on Makefile.am. This resolves
	problems with out-dated Emakefile with GNU make but not BSD make,
	because the latter doesn't reload a self-modified Makefile. Fix
	a problem where the source files order was lost in Emakefile.

	* ebin/Makefile.am: Use a variable for the application name. This
	reduces the diff with copies of this Makefile.am in other projects.
	The .app file depends on this Makefile.am too. Use PACKAGE_NAME for
	the application name. Typo in Awk code.

	* src/Makefile.am, ebin/Makefile.am: Fix a bug in AWK code used to
	generate Emakefile and .app files.

	* debian/rules: Build package in a separate directory.

2010-05-18  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* configure.ac: Define "debug" for Erlang code if --enable-debug is
	set.

	* src/syslog.erl, src/syslogger_app.erl: Add two functions that return
	if a facility and a log level are valid respectively.

2010-05-11  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* src/Makefile.am: Fix Emakefile generation by only selecting modules,
	eg. no headers.

	* Makefile.am: priv/ is treated before testsuite/.

2010-05-10  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>

	* configure.ac: Bash doesn't like an "if"-block with no instructions
	in the body: explicitly call the no-op instruction.
	Do not make testsuite/etest executable.
